Compiler/tests/good/Referencias/04_referencias.rs
fn main()
{
  let mut x : i32 = 4;
  let x : &mut i32 = &mut x;
  
  println!(*x);

  return;
}
