Compiler/tests/bad/Prints/01_prints.rs
// while context

fn main(){
    let mut x : i32 = 0;
    println!(x);
    return;
}